# core-sparkplugb-lib

./: Cargo.toml  README.md  sparkplug_b.proto
src/: lib.rs  main.rs  proto.rs  schema.rs  spark_error.rs  sparkplug_b.rs
